force-app/main/modules/dutchBusiness/objects/Business_Position__c/Business_Position__c.object-meta.xml
<CustomObject>
    <description>A Business Position connects a Business with a Person based on a function</description>
    <label>Business Position</label>
    <nameField>
        <label>Business Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>