force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Authorization_Description__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Description__c</fullName>
    <description>The description of the authorization this person has.</description>
    <label>Authorization Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>