force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Business_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Business_Dossier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The business dossier this function applies to.</description>
    <label>Business Dossier</label>
    <referenceTo>Business_Dossier__c</referenceTo>
    <relationshipLabel>Business Positions</relationshipLabel>
    <relationshipName>Business_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>