force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Business_Person__c.field-meta.xml
<CustomField>
    <fullName>Business_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The business person this function applies to.</description>
    <label>Business Person</label>
    <referenceTo>Business_Person__c</referenceTo>
    <relationshipLabel>Business Positions</relationshipLabel>
    <relationshipName>Business_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>