force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Filled_By__c.field-meta.xml
<CustomField>
    <fullName>Filled_By__c</fullName>
    <description>Returns the name of either the person or the organisation, depending on which is filled in.</description>
    <formula>IF( NOT(ISBLANK( Business_Person__c )) ,  Business_Person__r.Name,   Organisation__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filled By</label>
    <type>Text</type>
</CustomField>