force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Filled_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Filled_By_Id__c</fullName>
    <description>Returns the id of either the person or the organisation, depending on which is filled in.</description>
    <formula>IF( NOT(ISBLANK( Business_Person__c )) , Business_Person__c, Organisation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filled By Id</label>
    <type>Text</type>
</CustomField>