force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Function_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Function_Registration_Date__c</fullName>
    <description>The date this function was first registered.</description>
    <label>Function Registration Date</label>
    <type>Date</type>
</CustomField>