force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Function_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Function_Start_Date__c</fullName>
    <description>The date this person started as this function.</description>
    <label>Function Start Date</label>
    <type>Date</type>
</CustomField>