force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Function_Title__c.field-meta.xml
<CustomField>
    <fullName>Function_Title__c</fullName>
    <description>The name / title of the function.</description>
    <label>Function Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>