force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Function_Type__c.field-meta.xml
<CustomField>
    <fullName>Function_Type__c</fullName>
    <description>The type of the function.</description>
    <label>Function Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>