force-app/main/modules/dutchBusiness/objects/Business_Position__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organisation which hold a specific business position.</description>
    <label>Organisation</label>
    <referenceTo>Business_Dossier__c</referenceTo>
    <relationshipLabel>Business Positions (Organisation)</relationshipLabel>
    <relationshipName>Business_Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>